# bare-metal

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile
cmake/: toolchain_file.cmake
src/: CMakeLists.txt  main.c
